@@ -1,3 +1,9 @@
+2010-12-12  Vincent Torri  <doursse at users dot sf dot net>
+
+	* src/lib/evil_unistd.c:
+	* src/lib/evil_unistd.h:
+	add usleep() for vc++
+
 2010-12-10  Vincent Torri  <doursse at users dot sf dot net>
 
 	reviewed by: Vincent Torri
